--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,46 @@
-<header>
+<header class="py-3 mb-3 border-bottom">
+  <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
+    <div class="dropdown">
+      <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      </a>
+      <ul class="dropdown-menu text-small shadow">
+        <li><a class="dropdown-item active" href="#" aria-current="page">Overview</a></li>
+        <li><a class="dropdown-item" href="#">Inventory</a></li>
+        <li><a class="dropdown-item" href="#">Customers</a></li>
+        <li><a class="dropdown-item" href="#">Products</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Reports</a></li>
+        <li><a class="dropdown-item" href="#">Analytics</a></li>
+      </ul>
+    </div>
+
+    <div class="d-flex align-items-center">
+      <form class="w-100 me-3" role="search">
+        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+      </form>
+
+      <div class="flex-shrink-0 dropdown">
+        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+          <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+        </a>
+        <ul class="dropdown-menu text-small shadow">
+          <li><a class="dropdown-item" routerLink="/registro">Registrate</a></li>
+          <li><a class="dropdown-item"routerLink="/login">Iniciar sesión</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</header>
+<router-outlet></router-outlet>
+  <footer>
+  <p>{{footer}}/p>
+  </footer>
+
+
+
+
+<!-- <header>
   <p>Página inicial de {{title}}</p>
   <ul>
     <li><a routerLink="">Inicio</a></li>
@@ -9,4 +51,6 @@
   <router-outlet></router-outlet>
   <footer>
   <p>{{footer}}/p>
-  </footer>
+  </footer> -->
+
+  
