--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<form >
+    <div>
+        <label>Correo electrónico: </label>
+        <input type="email" name="email" [(ngModel)]="loginDTO.email" required emai  />
+    </div>
+    <div>
+        <label>Contraseña: </label>
+        <input type="password" name="password" [(ngModel)]="loginDTO.password" required/>
+        </div>
+    <button type="submit">Iniciar</button>
+</form>
