--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -1,1 +1,127 @@
-<p>registro works!</p>
+<!-- <div class="card">
+    <div class="card-header ps-5 pt-4 pb-4">
+        <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevocliente</h5>
+    </div>
+    <div class="card-body p-5">
+        <form #f="ngForm" (ngSubmit)="registrar()">
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Nombre: </label>
+                <div class="col-sm-10">
+                    <input #nombre="ngModel" class="form-control" [ngClass]="nombre.invalid && nombre.dirty
+                    ? 'is-invalid' : ''" type="text" name="nombre" [(ngModel)]="registroClienteDTO.nombre" required/>
+                </div>
+            </div>
+            
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Foto: </label>
+                <div class="col-sm-10">
+                  <input class="form-control" type="file" name="fotoPerfil"(change)="onFileChange($event)" required />
+                </div>
+            </div>
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Username: </label>
+                <div class="col-sm-10">
+                    <input #nickname="ngModel" class="form-control" [ngClass]="nickname.invalid && nickname.dirty
+                    ? 'is-invalid' : ''" type="text" name="nickname" [(ngModel)]="registroClienteDTO.nickname" required/>
+                </div>
+            </div>
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Correo electrónico: </label>
+                <div class="col-sm-10">
+                    <input #email="ngModel" class="form-control" [ngClass]="email.invalid && email.dirty
+                    ? 'is-invalid' : ''" type="email" name="email" [(ngModel)]="registroClienteDTO.email" required/>
+                </div>
+            </div>
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Contraseña: </label>
+                <div class="col-sm-10">
+                    <input #password="ngModel" class="form-control" [ngClass]="password.invalid && password.dirty
+                    ? 'is-invalid' : ''" type="password" name="password" [(ngModel)]="registroClienteDTO.password" required/>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label">Ciudad: </label>
+                <div class="col-sm-10">
+                <select class="form-select" name="ciudad" required
+                [(ngModel)]="registroClienteDTO.ciudadResidencia">
+                
+                <option value="" selected>Seleccione una ciudad</option>
+                @for (item of ciudades; track $index) { <option [value]="item">{{item}}</option> }
+                </select>
+                </div>
+                </div>
+            
+            <div class="mb-3 row">
+              <label class="col-sm-2 col-form-label">Repetir contraseña: </label>
+                <div class="col-sm-10">
+                    <input #confirmaPassword="ngModel" class="form-control" [ngClass]="confirmaPassword.invalid && confirmaPassword.dirty
+                    ? 'is-invalid' : ''" type="password" name="confirmaPassword" [(ngModel)]="registroClienteDTO.confirmaPassword" required/>
+                </div>
+            </div>
+            @if (!sonIguales()) { <div class="alert alert-danger" role="alert" >Las contraseñas no
+                coinciden</div> }
+                <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
+                <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
+                </button>   
+        </form>
+    </div>
+</div> -->
+
+
+<div class="card">
+    <div class="card-header ps-5 pt-4 pb-4">
+        <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo cliente</h5>
+    </div>
+    <div class="card-body p-5">
+        <form #f="ngForm" (ngSubmit)="registrar()">
+            <div class="mb-3">
+                <label>Nombre:</label>
+                <input #nombre="ngModel" class="form-control" [ngClass]="nombre.invalid && nombre.dirty ? 'is-invalid' : ''" type="text" name="nombre" [(ngModel)]="registroClienteDTO.nombre" required/>
+            </div>
+            
+            <div class="mb-3">
+                <label>Foto:</label>
+                <input class="form-control" type="file" name="fotoPerfil" (change)="onFileChange($event)" required />
+            </div>
+            
+            <div class="mb-3">
+                <label>Username:</label>
+                <input #nickname="ngModel" class="form-control" [ngClass]="nickname.invalid && nickname.dirty ? 'is-invalid' : ''" type="text" name="nickname" [(ngModel)]="registroClienteDTO.nickname" required/>
+            </div>
+            
+            <div class="mb-3">
+                <label>Correo electrónico:</label>
+                <input #email="ngModel" class="form-control" [ngClass]="email.invalid && email.dirty ? 'is-invalid' : ''" type="email" name="email" [(ngModel)]="registroClienteDTO.email" required/>
+            </div>
+            
+            <div class="mb-3">
+                <label>Contraseña:</label>
+                <input #password="ngModel" class="form-control" [ngClass]="password.invalid && password.dirty ? 'is-invalid' : ''" type="password" name="password" [(ngModel)]="registroClienteDTO.password" required/>
+            </div>
+            
+            <div class="mb-3">
+                <label>Ciudad:</label>
+                <select class="form-select" name="ciudad" required [(ngModel)]="registroClienteDTO.ciudadResidencia">
+                    <option value="" selected>Seleccione una ciudad</option>
+                    @for (item of ciudades; track $index) { <option [value]="item">{{item}}</option> }
+                </select>
+            </div>
+            
+            <div class="mb-3">
+                <label>Repetir contraseña:</label>
+                <input #confirmaPassword="ngModel" class="form-control" [ngClass]="confirmaPassword.invalid && confirmaPassword.dirty ? 'is-invalid' : ''" type="password" name="confirmaPassword" [(ngModel)]="registroClienteDTO.confirmaPassword" required/>
+            </div>
+            
+            @if (!sonIguales()) { <div class="alert alert-danger" role="alert" >Las contraseñas no coinciden</div> }
+            
+            <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
+                <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
+            </button>   
+        </form>
+    </div>
+</div>
+
+
+
+
+  
