se gregaron neuvas clases como Ubicacion, Horario, gestionNgocios, registro negocios y itemNegocios seguido de la configuracion de cada una

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#">Reports</a></li>
         <li><a class="dropdown-item" href="#">Analytics</a></li>
+        <li><a routerLink="/gestion-negocios" class="nav-link px-2">Gestión negocios</a></li>
       </ul>
     </div>
 
