--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,11 +1,17 @@
-<form >
-    <div>
-        <label>Correo electrónico: </label>
-        <input type="email" name="email" [(ngModel)]="loginDTO.email" required emai  />
-    </div>
-    <div>
-        <label>Contraseña: </label>
-        <input type="password" name="password" [(ngModel)]="loginDTO.password" required/>
+<div class="card-header ps-5 pt-4 pb-4">
+    <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo cliente</h5>
+</div>
+<div class="card-body p-5">
+    <form>
+        <div>
+            <label>Correo electrónico: </label>
+            <input type="email" name="email" [(ngModel)]="loginDTO.email" required emai  />
         </div>
-    <button type="submit">Iniciar</button>
-</form>
+        <div>
+            <label>Contraseña: </label>
+            <input type="password" name="password" [(ngModel)]="loginDTO.password" required/>
+        </div>
+        <button type="submit">Iniciar</button>
+    </form>
+</div>
+
