se crearon nuevas clases como  mapService  y se creo el formulario de crar negocio y de gestion negocio clase detalle negocio y itemNegocio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,12 @@
         <li><a class="dropdown-item" href="#">Inventory</a></li>
         <li><a class="dropdown-item" href="#">Customers</a></li>
         <li><a class="dropdown-item" href="#">Products</a></li>
+        <li><a routerLink="/gestion-negocios" class="nav-link px-2">Gestión negocios</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="#">Reports</a></li>
         <li><a class="dropdown-item" href="#">Analytics</a></li>
-        <li><a routerLink="/gestion-negocios" class="nav-link px-2">Gestión negocios</a></li>
+        
+        
       </ul>
     </div>
 
@@ -27,16 +29,16 @@
         </a>
         <ul class="dropdown-menu text-small shadow">
           <li><a class="dropdown-item" routerLink="/registro">Registrate</a></li>
-          <li><a class="dropdown-item"routerLink="/login">Iniciar sesión</a></li>
+          <li><a class="dropdown-item" routerLink="/login">Iniciar sesión</a></li>
         </ul>
       </div>
     </div>
   </div>
 </header>
 <router-outlet></router-outlet>
-  <footer>
-  <p>{{footer}}/p>
-  </footer>
+<footer>
+  <p>{{footer}}</p>
+</footer>
 
 
 
