--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="card-header ps-5 pt-4 pb-4">
-    <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo cliente</h5>
+    <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Inicio </h5>
 </div>
 <div class="card-body p-5">
     <form>
@@ -13,5 +13,7 @@
         </div>
         <button type="submit">Iniciar</button>
     </form>
-</div>
+</div> 
+
+
 
