--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <header class="py-3 mb-3 border-bottom">
   <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
     <div class="dropdown">
-      <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+      <a href="#"
+        class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle"
+        data-bs-toggle="dropdown" aria-expanded="false">
+        <svg class="bi me-2" width="40" height="32">
+          <use xlink:href="#bootstrap" />
+        </svg>
       </a>
       <ul class="dropdown-menu text-small shadow">
         <li><a class="dropdown-item active" href="#" aria-current="page">Overview</a></li>
@@ -10,11 +14,13 @@
         <li><a class="dropdown-item" href="#">Customers</a></li>
         <li><a class="dropdown-item" href="#">Products</a></li>
         <li><a routerLink="/gestion-negocios" class="nav-link px-2">Gestión negocios</a></li>
-        <li><hr class="dropdown-divider"></li>
+        <li>
+          <hr class="dropdown-divider">
+        </li>
         <li><a class="dropdown-item" href="#">Reports</a></li>
         <li><a class="dropdown-item" href="#">Analytics</a></li>
-        
-        
+
+
       </ul>
     </div>
 
@@ -24,7 +30,8 @@
       </form>
 
       <div class="flex-shrink-0 dropdown">
-        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+          aria-expanded="false">
           <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small shadow">
@@ -55,5 +62,3 @@
   <footer>
   <p>{{footer}}/p>
   </footer> -->
-
-  
