--- a/src/app/componentes/crear-negocio/crear-negocio.component.html
+++ b/src/app/componentes/crear-negocio/crear-negocio.component.html
@@ -27,72 +27,67 @@
                 <div class="col-sm-10">
                     <div class="row">
                         <div class="col">
-                            <input #latitud="ngModel" class="form-control"
-                                [ngClass]="latitud.invalid && latitud.dirty ? 'is-invalid' : ''" type="number"
-                                name="latitud" [(ngModel)]="registroNegocioDTO.ubicacion.latitud" required />
-                        </div>
-                        <div class="col">
-                            <input #longitud="ngModel" class="form-control" [ngClass]="longitud.invalid && longitud.dirty ? 'is-invalid' :
-        
-        ''" type="number" name="longitud" [(ngModel)]="registroNegocioDTO.ubicacion.longitud" required />
+                            <label class="col-sm-2 col-form-label">Ubicación: </label>
+                            <div class="col-sm-10">
+                                <div id="mapa"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label">Imágenes: </label>
-                <div class="col-sm-10">
-                    <input class="form-control" type="file" name="imagenes" (change)="onFileChange($event)" multiple
-                        required />
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label">Tipo: </label>
-                <div class="col-sm-10">
-
-
-                    <select name="tipo" required class="form-select" required
-                        [(ngModel)]="registroNegocioDTO.tipoNegocio">
-                        <option value="" selected>Seleccione un tipo para el negocio</option>
-                        @for (item of negocios; track $index) { <option [value]="item">{{item}}</option> }
-                    </select>
-
-
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label">Horarios: </label>
-                <div class="col-sm-8">
-                    @for (item of horarios; track $index) {
-                    <div class="row mb-2 ">
-                        <div class="col">
-                            <input class="form-control" placeholder="Día" type="text" name="dia-{{$index}}"
-                                [(ngModel)]="item.dia" required />
-
-                        </div>
-                        <div class="col">
-                            <input class="form-control" placeholder="Hora Inicio" type="time"
-                                name="horaInicio-{{$index}}" [(ngModel)]="item.horaInicio" required />
-
-                        </div>
-                        <div class="col">
-                            <input class="form-control" placeholder="Hora Fin" type="time" name="horaFin-{{$index}}"
-                                [(ngModel)]="item.horaFin" required />
-
-                        </div>
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Imágenes: </label>
+                    <div class="col-sm-10">
+                        <input class="form-control" type="file" name="imagenes" (change)="onFileChange($event)" multiple
+                            required />
                     </div>
-                    }
                 </div>
-                <div class="col-sm-2 text-end ">
-                    <button class="btn btn-primary" (click)="agregarHorario()">
-                        <i class="fa-solid fa-circle-plus me-1"></i>Agregar horario
-                    </button>
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Tipo: </label>
+                    <div class="col-sm-10">
+
+
+                        <select name="tipo" required class="form-select" required
+                            [(ngModel)]="registroNegocioDTO.tipoNegocio">
+                            <option value="" selected>Seleccione un tipo para el negocio</option>
+                            @for (item of negocios; track $index) { <option [value]="item">{{item}}</option> }
+                        </select>
+
+
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label">Teléfonos: </label>
-                <div class="col-sm-10">
-                    @for (item of telefonos; track $index) {
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Horarios: </label>
+                    <div class="col-sm-8">
+                        @for (item of horarios; track $index) {
+                        <div class="row mb-2 ">
+                            <div class="col">
+                                <input class="form-control" placeholder="Día" type="text" name="dia-{{$index}}"
+                                    [(ngModel)]="item.dia" required />
+
+                            </div>
+                            <div class="col">
+                                <input class="form-control" placeholder="Hora Inicio" type="time"
+                                    name="horaInicio-{{$index}}" [(ngModel)]="item.horaInicio" required />
+
+                            </div>
+                            <div class="col">
+                                <input class="form-control" placeholder="Hora Fin" type="time" name="horaFin-{{$index}}"
+                                    [(ngModel)]="item.horaFin" required />
+
+                            </div>
+                        </div>
+                        }
+                    </div>
+                    <div class="col-sm-2 text-end ">
+                        <button class="btn btn-primary" (click)="agregarHorario()">
+                            <i class="fa-solid fa-circle-plus me-1"></i>Agregar horario
+                        </button>
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Teléfonos: </label>
+                    <div class="col-sm-10">
+                        <!-- @for (item of telefonos; track $index) {
                         <div class="row mb-2 ">
                             <div class="col">
                                 <input class="form-control" placeholder="Tipo" type="text" name="tipo-{{$index}}"
@@ -106,15 +101,16 @@
     
                             </div>
                         </div>
-                        }
-                    
-                    
-                   
+                        } -->
+
+
+
+                    </div>
                 </div>
-            </div>
-            <button class="btn btn-primary" (click)="crearNegocio()" [disabled]="f.invalid">
-                <i class="fa-solid fa-circle-plus me-1"></i>Crear negocio
-            </button>
+                <button class="btn btn-primary" (click)="crearNegocio()" [disabled]="f.invalid">
+                    <i class="fa-solid fa-circle-plus me-1"></i>Crear negocio
+                </button>
+                </div>di
         </form>
     </div>
 </div>
