--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -127,6 +127,7 @@
             <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
                 <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
             </button>
+            <app-alerta [alerta]="alerta"></app-alerta>
         </form>
     </div>
 </div>
