--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,50 @@
 <header class="py-3 mb-3 border-bottom">
+
+
   <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
     <div class="dropdown">
-      <a href="#"
-        class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle"
-        data-bs-toggle="dropdown" aria-expanded="false">
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#bootstrap" />
-        </svg>
-      </a>
-      <ul class="dropdown-menu text-small shadow">
-        <li><a class="dropdown-item active" href="#" aria-current="page">Overview</a></li>
-        <li><a class="dropdown-item" href="#">Inventory</a></li>
-        <li><a class="dropdown-item" href="#">Customers</a></li>
-        <li><a class="dropdown-item" href="#">Products</a></li>
+
+
+      <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+        <use xlink:href="#bootstrap" />
+      </svg>
+
+
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
+        <li><a href="#" class="nav-link px-2 link-body-emphasis">Inventory</a></li>
+        <li><a href="#" class="nav-link px-2 link-body-emphasis">Customers</a></li>
+        <li><a href="#" class="nav-link px-2 link-body-emphasis">Products</a></li>
         <li><a routerLink="/gestion-negocios" class="nav-link px-2">Gestión negocios</a></li>
-        <li>
-          <hr class="dropdown-divider">
-        </li>
-        <li><a class="dropdown-item" href="#">Reports</a></li>
-        <li><a class="dropdown-item" href="#">Analytics</a></li>
-
-
       </ul>
+
+
     </div>
 
     <div class="d-flex align-items-center">
-      <form class="w-100 me-3" role="search">
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-      </form>
 
-      <div class="flex-shrink-0 dropdown">
+      <div class="flex-shrink-0 dropdown me-5 ">
         <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
           aria-expanded="false">
           <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small shadow">
-          <li><a class="dropdown-item" routerLink="/registro">Registrate</a></li>
-          <li><a class="dropdown-item" routerLink="/login">Iniciar sesión</a></li>
+
+          <div class="col-md-3 text-end">
+            @if (!isLogged) {
+            <li><a class="dropdown-item" routerLink="/registro">Registrate</a></li>
+            <li><a class="dropdown-item" routerLink="/login">Iniciar sesión</a></li>
+            }@else {
+
+            <li><a class="dropdown-item" routerLink="/actualizar-cliente">Actualizar</a></li>
+            <li><a class="dropdown-item" (click)="logout()">salir</a></li>
+           
+            }
+            
+          </div>
+
+
+
         </ul>
       </div>
     </div>
@@ -44,7 +52,7 @@
 </header>
 <router-outlet></router-outlet>
 <footer>
-  <p>{{footer}}</p>
+  <!-- <p>{{footer}}</p> -->
 </footer>
 
 
