--- a/src/app/componentes/gestion-negocios/gestion-negocios.component.html
+++ b/src/app/componentes/gestion-negocios/gestion-negocios.component.html
@@ -6,11 +6,17 @@
         <div class="mb-3">
         </div>
         <div class="table-responsive">
-            <button type="button" routerLink="/crear-negocio" class="btn btn-success me-2"><i
+            <button type="button" routerLink="/crear-negocio" class="btn btn-success me-4"><i
                     class="fa-solid fa-plus me-1"></i> Crear</button>
-            <button type="button" class="btn btn-danger anim-e" [disabled]="seleccionados.length == 0"
-                (click)="borrarNegocios()"><i class="fa-solid fa-trash me-1"></i> Eliminar
+           
+
+            <button type="button" routerLink="/actualizar-negocio"class="btn btn-success me-4" [disabled]="seleccionados.length == 0"
+                  > Actualizar
+                {{textoBtnActualizar}}</button>
+                <button type="button" class="btn btn-danger anim-e me-4 " [disabled]="seleccionados.length == 0"
+                (click)="borrarNegocios()"><i class="fa-solid fa-trash me-8"></i> Eliminar
                 {{textoBtnEliminar}}</button>
+
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                     <tr>
@@ -38,17 +44,17 @@
                             <p>{{item.tipoNegocio}}</p>
                         </td>
                         <td>
-                            <img src="{{item.imagenDestacada}}" alt="{{item.nombre}}" class="img-fluid"
+                            <img src="{{item.imagen}}" alt="{{item.nombre}}" class="img-fluid"
                                 style="max-width: 100px;">
                         </td>
 
                         <td>
-                            <p>{{item.calificacionPromedio}}</p>
+                            <p>No</p>
                         </td>
                         <td>
-                            <span [ngClass]="{'text-bg-success': item.estadoNegocio ==
-            'APROBADO', 'text-bg-danger': item.estadoNegocio == 'RECHAZADO', 'text-bg-warning':
-            item.estadoNegocio == 'PENDIENTE' }" class="badge">{{item.estadoNegocio}}</span>
+                            <span [ngClass]="{'text-bg-success': item.estadoRegistro ==
+            'APROBADO', 'text-bg-danger': item.estadoRegistro == 'RECHAZADO', 'text-bg-warning':
+            item.estadoRegistro == 'PENDIENTE' }" class="badge">{{item.estadoRegistro}}</span>
 
                         </td>
                         <td>
