--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -73,7 +73,7 @@
         <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo cliente</h5>
     </div>
     <div class="card-body p-5">
-        <form #f="ngForm" (ngSubmit)="registrar()">
+        <form #f="ngForm" >
             <div class="mb-3">
                 <label>Nombre:</label>
                 <input #nombre="ngModel" class="form-control"
@@ -81,9 +81,16 @@
                     [(ngModel)]="registroClienteDTO.nombre" required />
             </div>
 
-            <div class="mb-3">
-                <label>Foto:</label>
-                <input class="form-control" type="file" name="fotoPerfil" (change)="onFileChange($event)" required />
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label">Foto: </label>
+                <div class="col-sm-8">
+                    <input type="file" class="form-control" name="foto" (change)="onFileChange($event)" />
+                </div>
+                <div class="col-sm-2">
+                    <button type="submit" [disabled]="archivos == null" class="btn btn-primary" (click)="subirImagen()">
+                        <i class="fa-solid fa-cloud-arrow-up me-2"></i>Subir Foto
+                    </button>
+                </div>
             </div>
 
             <div class="mb-3">
@@ -101,19 +108,20 @@
             </div>
 
             <div class="mb-3">
-                <label>Contraseña:</label>
-                <input #password="ngModel" class="form-control"
-                    [ngClass]="password.invalid && password.dirty ? 'is-invalid' : ''" type="password" name="password"
-                    [(ngModel)]="registroClienteDTO.password" required />
-            </div>
-
-            <div class="mb-3">
                 <label>Ciudad:</label>
                 <select class="form-select" name="ciudad" required [(ngModel)]="registroClienteDTO.ciudadResidencia">
                     <option value="" selected>Seleccione una ciudad</option>
                     @for (item of ciudades; track $index) { <option [value]="item">{{item}}</option> }
                 </select>
             </div>
+
+            <div class="mb-3">
+                <label>Contraseña:</label>
+                <input #password="ngModel" class="form-control"
+                    [ngClass]="password.invalid && password.dirty ? 'is-invalid' : ''" type="password" name="password"
+                    [(ngModel)]="registroClienteDTO.password" required />
+            </div>
+
 
             <div class="mb-3">
                 <label>Repetir contraseña:</label>
@@ -124,7 +132,8 @@
 
             @if (!sonIguales()) { <div class="alert alert-danger" role="alert">Las contraseñas no coinciden</div> }
 
-            <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
+            <button (click)="registrar()"
+            class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
                 <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
             </button>
             <app-alerta [alerta]="alerta"></app-alerta>
