--- a/src/app/componentes/crear-negocio/crear-negocio.component.html
+++ b/src/app/componentes/crear-negocio/crear-negocio.component.html
@@ -40,6 +40,15 @@
                         <input class="form-control" type="file" name="imagenes" (change)="onFileChange($event)" multiple
                             required />
                     </div>
+
+                    <div class="col-sm-3">
+                        <button type="submit" [disabled]="archivos == null" class="btn btn-primary"
+                            (click)="subirImagenes()">
+    
+                            <i class="fa-solid fa-cloud-arrow-up me-2"></i>Subir imágenes
+                        </button>
+                    </div>
+
                 </div>
                 <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">Tipo: </label>
@@ -47,7 +56,7 @@
 
 
                         <select name="tipo" required class="form-select" required
-                            [(ngModel)]="registroNegocioDTO.tipoNegocio">
+                            [(ngModel)]="registroNegocioDTO.tipoNegocios">
                             <option value="" selected>Seleccione un tipo para el negocio</option>
                             @for (item of negocios; track $index) { <option [value]="item">{{item}}</option> }
                         </select>
