--- a/src/app/componentes/historial-de-revicion/historial-de-revicion.component.html
+++ b/src/app/componentes/historial-de-revicion/historial-de-revicion.component.html
@@ -1,16 +1,22 @@
 <div class="card">
     <div class="card-header ps-5 pt-4 pb-4">
-        <h5 class="mb-0"><i class="fa-solid fa-location-dot me-3"></i>Gestión de negocios</h5>
+        <h5 class="mb-0"><i class="fa-solid fa-location-dot me-3"></i>Historial de revicion</h5>
     </div>
     <div class="card-body p-5">
         <div class="mb-3">
         </div>
         <div class="table-responsive">
-            <button type="button" routerLink="/crear-negocio" class="btn btn-success me-4"><i
-                    class="fa-solid fa-plus me-1"></i> Crear</button>
-            <button type="button" class="btn btn-danger anim-e me-4 " [disabled]="seleccionados.length == 0"
-                (click)="borrarNegocios()"><i class="fa-solid fa-trash me-8"></i> Eliminar
-                {{textoBtnEliminar}}</button>
+            
+           
+
+  
+            <button type="button" routerLink="/revicion"class="btn btn-success me-4" [disabled]="seleccionados.length == 0"
+                  > ACEPTAR
+                {{textoBtnSolicitud}}</button>
+                <button type="button" routerLink="/revicion"class="btn btn-success me-4" [disabled]="seleccionados.length == 0"
+                >RECHAZAR
+              {{textoBtnSolicitud}}</button>
+               
 
             <table class="table table-striped table-hover table-responsive">
                 <thead>
@@ -56,11 +62,6 @@
                             <a routerLink="/detalle-negocio/{{item.codigoNegocio}}"><i
                                     class="fa-solid fa-circle-info me-2"></i>Ver detalle</a>
 
-                        </td>
-
-                        <td>
-                            <button type="button" class="btn btn-sm btn-outline-primary"
-                                routerLink="/actualizar-negocio/{{item.codigoNegocio}}"><i class="bi bi-pencil-fill"></i></button>
                         </td>
                     </tr>
                     }
