--- a/src/app/componentes/historial-de-revicion/historial-de-revicion.component.html
+++ b/src/app/componentes/historial-de-revicion/historial-de-revicion.component.html
@@ -21,12 +21,12 @@
             <table class="table table-striped table-hover table-responsive">
                 <thead>
                     <tr>
+                        <th> </th>
                         <th>Código</th>
                         <th>Nombre</th>
                         <th>Tipo de negocio</th>
                         <th>Imagen destacada</th>
-                        <th>Calificación promedio</th>
-                        <th>Estado negocio</th>
+                        <th>Estado Registro</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -50,14 +50,12 @@
                         </td>
 
                         <td>
-                            <p>No</p>
-                        </td>
-                        <td>
                             <span [ngClass]="{'text-bg-success': item.estadoRegistro ==
             'APROBADO', 'text-bg-danger': item.estadoRegistro == 'RECHAZADO', 'text-bg-warning':
-            item.estadoRegistro == 'PENDIENTE' }" class="badge">{{item.estadoRegistro}}</span>
+            item.estadoRegistro == 'PENDIENTE' }" class="badge">{{item.estadoNegocio}}</span>
 
                         </td>
+                       
                         <td>
                             <a routerLink="/detalle-negocio/{{item.codigoNegocio}}"><i
                                     class="fa-solid fa-circle-info me-2"></i>Ver detalle</a>
