--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<form role="search" (submit)="iraBusqueda(textoBusqueda.value)">
+<!-- <form role="search" (submit)="iraBusqueda(textoBusqueda.value)">
     <div class="input-group">
         <input #textoBusqueda type="search" class="form-control" placeholder="Buscar..." aria-label="Search">
         <button type="button" class="btn btn-primary ">
@@ -7,4 +7,59 @@
     </div>
 </form>
 
-<div id="mapa"></div>
+<div id="mapa"></div> -->
+
+
+<!-- search.component.html -->
+<!-- search.component.html -->
+<!-- search.component.html -->
+<!-- search.component.html -->
+<form (ngSubmit)="iraBusqueda()" class="search-form">
+  <div class="input-group mb-3">
+    <input [(ngModel)]="textoBusqueda" name="textoBusqueda" type="search" class="form-control" placeholder="Buscar..." aria-label="Buscar">
+    <button type="submit" class="btn btn-primary">
+      <i class="fa-solid fa-magnifying-glass"></i> Buscar
+    </button>
+  </div>
+  <div class="filters mb-3">
+    <label><strong>Filtros</strong></label><br>
+    <div class="filter-option">
+      <input type="checkbox" [(ngModel)]="tipoNegocio" name="tipoNegocio" (change)="onFilterChange('tipoNegocio')">
+      <label for="tipoNegocio">Tipo de negocio</label>
+    </div>
+    <div class="filter-option">
+      <input type="checkbox" [(ngModel)]="nombre" name="nombre" (change)="onFilterChange('nombre')">
+      <label for="nombre">Nombre</label>
+    </div>
+  </div>
+</form>
+
+<div id="mapa" class="map"></div>
+
+<form (ngSubmit)="iraBusqueda()" class="search-form">
+  <div class="input-group mb-3">
+    <input [(ngModel)]="textoBusqueda" name="textoBusqueda" type="search" class="form-control" placeholder="Buscar..." aria-label="Buscar">
+    <button type="submit" class="btn btn-primary">
+      <i class="fa-solid fa-magnifying-glass"></i> Buscar
+    </button>
+  </div>
+  <div class="dropdown mb-3">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="filtroDropdown" data-toggle="collapse" data-target="#filtroCollapse" aria-expanded="false" aria-controls="filtroCollapse">
+      Filtros
+    </button>
+    <div id="filtroCollapse" class="collapse">
+      <div class="card card-body">
+        <div class="filter-option">
+          <input type="checkbox" [(ngModel)]="tipoNegocio" name="tipoNegocio" (change)="onFilterChange('tipoNegocio')">
+          <label for="tipoNegocio">Tipo de negocio</label>
+        </div>
+        <div class="filter-option">
+          <input type="checkbox" [(ngModel)]="nombre" name="nombre" (change)="onFilterChange('nombre')">
+          <label for="nombre">Nombre</label>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+
+<div id="mapa" class="map"></div>
